# fastapi-starter

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: main.py
src/api/dependencies/: database.py
src/core/: config.py
src/db/: session.py
src/db/models/: __init__.py  base.py
src/models/: core.py
tests/: conftest.py  test_heartbeat.py
