[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["John MacKenzie <rjmackenzieii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
python-dotenv = "^0.19.0"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"
asgi-lifespan = "^1.0.1"
pytest-xdist = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
